# chat

./: .gitignore  CMakeLists.txt  NET_diagram.xml  README.md  TASKS.md  chat_layers_uml.xml  layers.xml  service_messages.md  threads.xml
Chat/: CMakeLists.txt  Chat.pro  Chat.pro.user.ac7d3cf  qmake-target-platform.pri
Chat/chat-lib/: CMakeLists.txt  chat-lib.pro
Chat/chat-lib/source/: CMakeLists.txt  chat-lib_global.h  viewcontroller.cpp  viewcontroller.h
Chat/chat-tests/: chat-tests.pro  tst_chattest.cpp
Chat/chat-tests/source/: main.cpp  test-suite.cpp  test-suite.h
Chat/chat-ui/: CMakeLists.txt  chat-ui.pro  components.qrc  main.cpp  views.qrc
Chat/chat-ui/assets/: Style.qml
Chat/chat-ui/components/: AddressEditor.qml  ChatListViewDelegate.qml  CommandBar.qml  CommandButton.qml  ContactDelegate.qml  ContactsEditor.qml  EnimeratorSelectorView.qml  EnumeratorSelector.qml  EnumeratorSelectorView.qml  FormButton.qml  FriendListViewDelegate.qml  InputString.qml  LabelAndText.qml  (+7 more)
MessengerQML/: MessengerQML.pro  components.qrc  main.qml
MessengerQML/components/: BigLeftBar.qml  ChatButton.qml  IconButton.qml  SmallLeftBar.qml
include/chat/: JSONTaskExecutor.hpp  RPCServer.hpp  TaskExecutor.hpp  TaskExecutorRunner.hpp  UDPRPCServer.hpp
pseudoNS/: client.go  server.go
server_udp/: Server.docx
src/: CMakeLists.txt  Handlers.hpp  JSONTaskExecutor.cpp  RPCServer.cpp  TaskExecutor.cpp  TaskExecutor.hpp  TaskExecutorRunner.cpp  UDPRPCServer.cpp  UDPServer.hpp  Udp_server.hpp  main.cpp  task_manager.hpp
test/: CMakeLists.txt  cli.cpp  test_conf.txt
(+112 files in other folders)
